# arx

./: Cargo.toml  README.md  arx.toml  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
rules/: code_injection.toml  default.toml  secrets.toml  web_injection.toml
src/: allowlist.rs  config.rs  hook.rs  main.rs  output.rs  scanner.rs
src/rules/: encoding.rs  heuristics.rs  mod.rs  signatures.rs
tests/: scan_test.rs
tests/fixtures/: clean.md  code_injection.md  encoded.md  jailbreak.md  malicious.md  secrets.md  typoglycemia.md  web_injection.md
