[package]
name = "arx"
version = "0.1.0"
edition = "2024"
description = "Protect AI agents from prompt injection and common vulnerabilities"
license = "AGPL-3.0"
repository = "https://github.com/arjunkomath/arx"
homepage = "https://arjunkomath.github.io/arx/"

[dependencies]
aho-corasick = "1"
dirs = "6"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
percent-encoding = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
ignore = "0.4"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
